# ambers

./: .gitignore  API_REFERENCE.md  CLAUDE.md  Cargo.toml  README.md  architecture.md  bench.py  bench_results.md  main.py  pyproject.toml  pyreadstat_meta.json  summary.md  test_diff_meta.py
.cargo/: config.toml
.github/workflows/: release.yml
crates/ambers/: Cargo.toml
crates/ambers-py/: Cargo.toml
crates/ambers-py/src/: lib.rs
crates/ambers/src/: arrow_convert.rs  constants.rs  data.rs  error.rs  metadata.rs  variable.rs
crates/ambers/src/info_records/: encoding_record.rs  mr_sets.rs
docs/: bugfix_reader.md  milestone2_plan.md
python/ambers/: __init__.py  __init__.pyi
src/: arrow_convert.rs  columnar.rs  constants.rs  data.rs  dictionary.rs  document.rs  encoding.rs  header.rs  io_utils.rs  lib.rs  main.rs  metadata.rs  scanner.rs  value_labels.rs  variable.rs
src/compression/: bytecode.rs  mod.rs  zlib.rs
src/info_records/: float_info.rs  integer_info.rs  long_string_labels.rs  long_string_missing.rs  long_var_names.rs  mod.rs  var_display.rs  very_long_strings.rs
src/python/: mod.rs
tests/: bench_read.py  conftest.py  test_long_strings.py  test_metadata.py  test_paths.example.py  test_temporal.rs
