[package]
name = "ambers"
version = "0.1.0"
edition = "2024"
description = "Pure Rust reader for SPSS .sav and .zsav files"
license = "MIT"

[dependencies]
arrow = { version = "55", default-features = false, features = ["ffi"] }
flate2 = "1"
encoding_rs = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
