[package]
name = "ambers"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Pure Rust reader for SPSS .sav and .zsav files"
repository = "https://github.com/albertxli/ambers"
readme = "README.md"

[lib]
name = "ambers"
crate-type = ["rlib"]

[features]
default = []
python = [
    "dep:pyo3",
]

[dependencies]
arrow = { version = "57", default-features = false, features = ["ffi"] }
flate2 = "1"
encoding_rs = "0.8"
thiserror = "2"
rayon = "1"
indexmap = "2"

# Python-only (optional)
pyo3 = { version = "0.26", features = ["extension-module", "indexmap"], optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
