[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ambers"
version = "0.2.4"
description = "Pure Rust SPSS .sav/.zsav reader with Polars DataFrame output"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.3",
]

[tool.maturin]
module-name = "ambers._ambers"
python-source = "python"
features = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
